--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ a#scrollUp i{
 **************************/
 
 .header_top {
-  background: none repeat scroll 0 0 #F0F0E9;
+  background: none repeat scroll 0 0 rgb(79,79,79);
 }
 
 .contactinfo ul li:first-child{
@@ -77,7 +77,7 @@ a#scrollUp i{
 
 .contactinfo ul li a{
   font-size: 12px;
-  color: #696763;
+  color: rgb(235,234,233);
   font-family: 'Roboto', sans-serif;
 }
 
@@ -90,7 +90,7 @@ a#scrollUp i{
 .social-icons ul li a {
   border: 0 none;
   border-radius: 0;
-  color: #696763;
+  color: #66ccff;
   padding:0px;
 }
 
@@ -108,7 +108,7 @@ a#scrollUp i{
 }
 
 .social-icons ul li a i:hover{
-  color: #fff;
+  color: #66ccff;
    transition: all 0.9s ease 0s;
   -moz-transition: all 0.9s ease 0s;
   -webkit-transition: all 0.9s ease 0s;
@@ -117,23 +117,23 @@ a#scrollUp i{
 
 
 .fa-facebook:hover {
-  background: #0083C9;
+  background:  rgb(235,234,233);
 }
 
 .fa-twitter:hover  {
-	background:#5BBCEC;
+	background: rgb(235,234,233);
 }
 
 .fa-linkedin:hover  {
-	background:#FF4518;
+	background: rgb(235,234,233);
 }
 
 .fa-dribbble:hover  {
-	background:#90C9DC;
+	background: rgb(235,234,233);
 }
 
 .fa-google-plus:hover  {
-	background:#CE3C2D;
+	background: rgb(235,234,233);
 }
 
 .header-middle .container .row {
@@ -351,7 +351,7 @@ ul.sub-menu {
 **************************/
 
 #footer {
-  background: #F0F0E9;
+  background: rgb(79,79,79);
 }
 
 
@@ -518,9 +518,28 @@ ul.sub-menu {
   margin-top: 0;
   outline: medium none;
   padding: 7px;
-  width: 212px;
+  width:212px;
+  background: transparent;
+
+
 }
 
+#imaginary_container{
+  margin-top:3%;
+
+}
+.stylish-input-group .input-group-addon{
+  background: white !important;
+}
+.stylish-input-group .form-control{
+  border-right:0;
+  box-shadow:0 0 0;
+  border-color:#ccc;
+}
+.stylish-input-group button{
+  border:0;
+  background:transparent;
+}
 
 .searchform button {
   background: #0fb1fe;
@@ -534,11 +553,13 @@ ul.sub-menu {
 .searchform button i {
   color: #FFFFFF;
   font-size: 20px;
+  background: transparent;
 }
 
-.searchform  button:hover, 
+.searchform  button:hover,
 .searchform  button:focus{
 	background-color:#0fb1fe;
+
 }
 
 .searchform p {
@@ -547,6 +568,7 @@ ul.sub-menu {
   font-size: 14px;
   font-weight: 300;
   margin-top: 25px;
+
 }
 
 .footer-bottom {
